// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQPage matches snapshot when withHome=false 1`] = `
<DocumentFragment>
  <div
    class="w-full flex flex-col sm:flex-row justify-between items-start p-1 sm:p-2 md:p-4 flex-grow overflow-y-auto"
  >
    <div
      class="flex flex-row items-start gap-4 w-full"
    >
      <div
        class="flex items-start"
      >
        <svg
          class="mr-2 cursor-pointer"
          fill="none"
          height="29"
          viewBox="0 0 24 18"
          width="29"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            fill="#000000"
          />
        </svg>
      </div>
      <div
        class="flex flex-col items-start gap-8 w-full mr-2 sm:mr-4 md:mr-8 lg:mr-10"
      >
        <div
          class="flex flex-col items-start"
        >
          <h1
            data-testid="faq"
          >
            title
          </h1>
        </div>
        <div
          class="w-full"
        >
          <div
            data-testid="faq-accordion"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQPage matches snapshot when withHome=true 1`] = `
<DocumentFragment>
  <div
    class="w-full flex flex-col sm:flex-row justify-between items-start p-1 sm:p-2 md:p-4 flex-grow overflow-y-auto"
  >
    <div
      class="flex flex-row items-start gap-4 w-full"
    >
      <div
        class="flex items-start"
      >
        <svg
          class="mr-2 cursor-pointer"
          fill="none"
          height="29"
          viewBox="0 0 24 18"
          width="29"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            fill="#000000"
          />
        </svg>
      </div>
      <div
        class="flex flex-col items-start gap-8 w-full mr-2 sm:mr-4 md:mr-8 lg:mr-10"
      >
        <div
          class="flex flex-col items-start"
        >
          <h1
            data-testid="faq"
          >
            title
          </h1>
          <button
            data-testid="faq-home-button"
          >
            User:Home.title
          </button>
        </div>
        <div
          class="w-full"
        >
          <div
            data-testid="faq-accordion"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
